# planting-life

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  create_dev_db.sh
backend/db/: Schema.drawio  db-notes.txt  liquibase.properties
backend/db/migrations/: add-moistures-shades.sql  add-plant-details.sql  changelog.xml  create-garden-tables.sql  create-images-table.sql  create-nursery-tables.sql  create-plants-table.sql  create-query-tables.sql  create-region-plants-table.sql  create-region-table.sql  create-zipcode-table.sql  populate-nurseries.sql  populate-regions.sql  populate-zipcodes.sql
backend/resources/: nurseries.csv  regions.csv  usda_symbols.json
backend/scripts/: parse_nurseries.py
backend/src/: ai.rs  app.rs  citations.rs  controllers.rs  database.rs  domain.rs  flickr.rs  highlights.rs  hydrator.rs  lib.rs  main.rs  openai.rs  selector.rs
backend/src/ai/: openai.rs  prompts.rs
backend/src/ai/prompts/: conditions.rs  details.rs  list.rs  ratings.rs
backend/src/controllers/: gardens.rs  nurseries.rs  plants.rs
backend/src/database/: conversions.rs  sql.rs
frontend/: .env.development  .env.production  package-lock.json  package.json
frontend/public/: browserconfig.xml  index.html  site.webmanifest
frontend/src/: App.css  App.js  AttributionPopover.js  DropdownSelect.js  PlantCard.js  Plants.css  Plants.js  index.css  index.js  setupProxy.js  spinner.css
frontend/src/components/: AttributionPopover.js  ConditionsForm.css  ConditionsForm.js  DropdownSelect.js  Footer.css  Footer.js  GardenSummary.js  IntroAccordion.js  NavBar.css  NavBar.js  Nursery.css  Nursery.js  PlantAutocomplete.js  PlantCard.css  PlantCard.js  RatingPopover.js  SaveGardenModal.js  Spinner.css
frontend/src/components/AttributionPopover/: AttributionPopover.css  AttributionPopover.js
frontend/src/components/ConditionsForm/: ConditionsForm.css  ConditionsForm.js
frontend/src/components/DropdownSelect/: DropdownSelect.js
frontend/src/components/Footer/: Footer.css  Footer.js
frontend/src/components/Highlight/: Highlight.css  Highlight.js
frontend/src/components/IntroAccordion/: IntroAccordion.js
frontend/src/components/NavBar/: NavBar.css  NavBar.js
frontend/src/components/Nursery/: Nursery.js
frontend/src/components/PlantCard/: PlantCard.css  PlantCard.js
frontend/src/components/RatingPopover/: RatingPopover.css  RatingPopover.js
frontend/src/components/Spinner/: Spinner.css  Spinner.js
frontend/src/pages/: Garden.js  Home.css  Home.js
frontend/src/pages/Garden/: Garden.css  Garden.js
frontend/src/pages/Home/: Home.css  Home.js
frontend/src/tabs/: DiscoverTab.js  GardenTab.css  GardenTab.js  NurseryTab.js
frontend/src/utilities/: garden-api.js  nursery-api.js  openai-api.js  plant-api.js
src/: lib.rs  main.rs
