[package]
name = "planting-life"
version = "0.1.0"
edition = "2021"
default-run = "webserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

actix-web = "4.3"
actix-cors = "0.6.4"

futures = "0.3.28"
tokio = "1.18"
reqwest-retry = "0.2.2"
reqwest-middleware = "0.2.1"
anyhow = "1.0.71"

# for returning server sent events
actix-web-lab = "0.19.1"

# stream is for bytes_stream()
reqwest = { version = "0.11.17", features = ["json", "stream" ] }

# for StreamReader
tokio-util = { version = "0.6", features = ["io"]}

# for LinesStream
tokio-stream = { version = "0.1.14", features = ["io-util"]}

lazy_static = "1.4.0"

mysql_async = { version = "0.32.2", default-features = false, features = ["minimal"] }

regex = "1.9.1"

mockall = "0.11"
mockall_double = "0.3"

rand = "0.8.5"
