[package]
name = "planting-life"
version = "0.1.0"
edition = "2021"
default-run = "webserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

actix-web = "4.4"
actix-cors = "0.6.4"

tokio = { version = "1.32", features = ["rt", "macros"] }
anyhow = "1.0.71"

lazy_static = "1.4.0"

mysql_async = { version = "0.32.2", default-features = false, features = ["minimal"] }

mockall = "0.11"
mockall_double = "0.3"

rand = "0.8.5"


# TODO: Remove these once streaming interfaces are removed
futures = "0.3.28"
actix-web-lab = "0.19.1"